# CodeTricks

./: aligned_test.cc  async_say_love_fxp.cc  best-sellers-books.cc  circular_buffer.cc  compiler_micro.h  concat_string.cc  continue_timer.cc  getline.cc  is_palindrome.cpp  no-free-store.cc  readme  say.cc  shared_ptr_copyonwrite.cc  siglongjmp.c  spawn_say_love_fxp.cc  switch_use.cc  thread_once_singleton.cc  type_erasure.cc
LockFreeMemoryPool/: memory_pool.cpp  memory_pool.h
LockFreeQueue/: LockFreeQueue.cpp  Queue.h
MemoryPool/: LockFreeMemPool.cpp  memory_pool.cpp  memory_pool.h  pool.cpp  pool.h
fifo_spinlock/: Lock.h  test.cpp
inline_guard/: a.out  main.cc  test.cpp  test.h  test.ipp
protobuf/: .test.cc.swp  CMakeLists.txt  im.helloworld.proto  serialization.hpp  server.cpp  test.cc
protobuf/client/: CMakeLists.txt  client.cpp
protobuf/pb/: CMakeLists.txt  im.helloworld.pb.cc  im.helloworld.pb.h
protobuf/server/: CMakeLists.txt  server.cpp
spinlock/: Lock.h  test.cpp
